@startuml

!pragma ignoreimport
!define ENTITY <b><&star;&star;Entity&star;&star;></b>
!define TABLE <b><&star;&star;Table&star;&star;></b>
!define COLUMN <b><&star;&star;Column&star;&star;></b>
!define ID <b><&star;&star;Id&star;&star;></b>
!define GENERATED <b><&star;&star;GeneratedValue&star;&star;></b>
!define INHERITANCE <b><&star;&star;Inheritance&star;&star;></b>
!define STRATEGY <b><&star;&star;strategy&star;&star;></b>
!define JOINED <b><&star;&star;JOINED&star;&star;></b>

package com.supermercado.productos {
  class Producto {
    -id: int
    -nombre: String
    -stock: int
    -departamento: String
    +Producto()
    +Producto(nombre: String, stock: int, departamento: String)
    +getPrecio(): double
    +getId(): int
    +setId(id: int): void
    +getNombre(): String
    +setNombre(nombre: String): void
    +getStock(): int
    +setStock(stock: int): void
    +getDepartamento(): String
    +setDepartamento(departamento: String): void
    +aumentarStock(cantidad: int): void
    +agregarStock(cantidad: int): void
  }


class ProductoCompuesto {
    -productos: List<Producto>
    +ProductoCompuesto()
    +ProductoCompuesto(nombre: String, stock: int, departamento: String, productos: List<Producto>)
    +addProducto(producto: Producto)
    +getPrecio(): double
    +getProductos(): List<Producto>
    +toString(): String
}

class ProductoSimple {
    -precio: double
    +ProductoSimple()
    +ProductoSimple(nombre: String, precio: double, stock: int, departamento: String)
    +getPrecio(): double
    +setPrecio(precio: double)
    +toString(): String
}

class ProductoPorPeso {
  - peso: double
  + getPeso(): double
  + setPeso(double peso): void
  + getPrecio(): double
  + toString(): String
}

ProductoCompuesto "1" *-- "*" Producto : contiene >
Producto <|-- ProductoCompuesto
Producto <|-- ProductoSimple
ProductoSimple <|-- ProductoPorPeso

@enduml
